Fixed search SVG cut off in Firefox

--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -295,6 +295,7 @@
 		
 		svg {
 			height: 16px;
+			overflow: visible;
 			width: 16px;
 			
 			path {
